@@ -37,5 +37,6 @@
 - store_attr/colr could be two-pass and avoid reverse_add/remove games
 - window creation/idle time
 - attributes could be 8 not 16 bits
-- put title setting back
 - profile/optimise, particularly (i suspect) input.c
+- tidy up input.c a bit
+- decide about customised status line
